<resources>
    <string name="app_name">Group 16</string>
    <string name="restaurantname">restaurantName</string>
    <string name="gps">gps</string>
    <string name="address">address</string>
    <string name="critical_issues">critical issues</string>
    <string name="non_critical_issues">non-critical issues</string>
    <string name="inspection_date">Inspection Date</string>
    <string name="inspection_routine">Inspection Type</string>
    <string name="tools_ignore_contentdescription">tools:ignore=ContentDescription</string>
    <string name="hazard_rating">Hazard Rating :</string>
    <string name="title_activity_update_popup">updatePopup</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="title_activity_restaurant_maps">Map</string>
    <string name="go_to">Go to</string>

    <string name="map">Map</string>
    <string name="restaurant_list">Restaurant List</string>
    <string name="there_is_new_restaurant_data_available_to_be_updated">There is new restaurant data available to be updated</string>
    <string name="update">update</string>
    <string name="ignore">ignore</string>
    <string name="there_is_new_inspection_data_available_to_be_updated">There is new inspection data available to be updated</string>
    <string name="updating">updating...</string>

    <string name="preStrNumCrit">Critical issues #: </string>
    <string name="preStrNonNumCrit">Non - Critical issues #: </string>
    <string name="preStrInspectDate">Inspection Date: </string>
    <string name="preStrInspectType">Inspection Type: </string>

    <string name="hazardLevelLow">Hazard Level: Low</string>
    <string name="hazardLevelModerate">Hazard Level: Moderate</string>
    <string name="hazardLevelHigh">Hazard Level: High</string>

    <string name="numIssuesPreStr"># of Issues Found: </string>

    <string name="Low">Low</string>
    <string name="Moderate">Moderate</string>
    <string name="High">High</string>

    <string name="Critical">Critical</string>
    <string name="Not_Critical">Not Critical</string>

    <string name="City">City</string>
    <string name="Address">Address</string>

    <string name="no_description">No Description</string>

    <string name="viol_101">101,Not Critical,Plans/construction/alterations not in accordance with the Regulation [s. 3; s. 4],Not Repeat</string>
    <string name="viol_102">102,Not Critical,Operation of an unapproved food premises [s. 6(1)],Not Repeat</string>
    <string name="viol_103">103,Not Critical,Failure to hold a valid permit while operating a food service establishment [s. 8(1)],Not Repeat</string>
    <string name="viol_104">104,Not Critical,Permit not posted in a conspicuous location [s. 8(7)],Not Repeat</string>

    <string name="viol_201">201,Critical,Food contaminated or unfit for human consumption [s. 13],Not Repeat</string>
    <string name="viol_202">202,Critical,Food not processed in a manner that makes it safe to eat [s. 14(1)],Not Repeat</string>
    <string name="viol_203">203,Critical,Food not cooled in an acceptable manner [s. 12(a)],Not Repeat</string>
    <string name="viol_204">204,Critical,Food not cooked or reheated in a manner that makes it safe to eat [s. 14(1)],Not Repeat</string>
    <string name="viol_205">205,Critical,Cold potentially hazardous food stored/displayed above 4 �C. [s. 14(2)],Not Repeat</string>
    <string name="viol_206">206,Critical,Hot potentially hazardous food stored/displayed below 60 �C. [s. 14(2)],Not Repeat</string>
    <string name="viol_208">208,Not Critical,Foods obtained from unapproved sources [s. 11],Not Repeat</string>
    <string name="viol_209">209,Not Critical,Food not protected from contamination [s. 12(a)],Not Repeat</string>
    <string name="viol_210">210,Not Critical,Food not thawed in an acceptable manner [s. 14(2)],Not Repeat</string>
    <string name="viol_211">211,Not Critical,Frozen potentially hazardous food stored/displayed above -18 �C. [s. 14(3)],Not Repeat</string>
    <string name="viol_212">212,Not Critical,Operator has not provided acceptable written food handling procedures [s. 23],Not Repeat</string>

    <string name="viol_301">301,Critical,Equipment/utensils/food contact surfaces not maintained in sanitary condition [s. 17(1)],Not Repeat</string>
    <string name="viol_302">302,Critical,Equipment/utensils/food contact surfaces not properly washed and sanitized [s. 17(2)],Not Repeat</string>
    <string name="viol_303">303,Critical,Equipment/facilities/hot &amp; cold water for sanitary maintenance not adequate [s. 17(3); s. 4(1)(f)],Not Repeat</string>
    <string name="viol_304">304,Not Critical,Premises not free of pests [s. 26(a)],Not Repeat</string>
    <string name="viol_305">305,Not Critical,Conditions observed that may allow entrance/harbouring/breeding of pests [s. 26(b),(c)],Not Repeat</string>
    <string name="viol_306">306,Not Critical,Food premises not maintained in a sanitary condition [s. 17(1)],Not Repeat</string>
    <string name="viol_307">307,Not Critical,Equipment/utensils/food contact surfaces are not of suitable design/material [s. 16; s. 19],Not Repeat</string>
    <string name="viol_308">308,Not Critical,Equipment/utensils/food contact surfaces are not in good working order [s. 16(b)],Not Repeat</string>
    <string name="viol_309">309,Not Critical,Chemicals, cleansers, &amp; similar agents stored or labeled improperly [s. 27],Not Repeat</string>
    <string name="viol_310">310,Not Critical,Single use containers &amp; utensils are used more than once [s. 20],Not Repeat</string>
    <string name="viol_311">311,Not Critical,Premises not maintained as per approved plans [s. 6(1)(b)],Not Repeat</string>
    <string name="viol_312">312,Not Critical,Items not required for food premises operation being stored on the premises [s. 18],Not Repeat</string>
    <string name="viol_314">314,Not Critical,Operator has not provided acceptable written sanitation procedures [s. 24],Not Repeat</string>
    <string name="viol_315">315,Not Critical,Refrigeration units and hot holding equipment lack accurate thermometers [s. 19(2)],Not Repeat</string>

    <string name="viol_401">401,Critical,Adequate handwashing stations not available for employees [s. 21(4)],Not Repeat</string>
    <string name="viol_402">402,Critical,Employee does not wash hands properly or at adequate frequency [s. 21(3)],Not Repeat</string>
    <string name="viol_404">404,Not Critical,Employee smoking in food preparation/processing/storage areas [s. 21(2)],Not Repeat</string>

    <string name="viol_501">501,Not Critical,Operator does not have FOODSAFE Level 1 or Equivalent [s. 10(1)],Not Repeat</string>
    <string name="viol_502">502,Not Critical,In operator�s absence, no staff on duty has FOODSAFE Level 1 or equivalent [s. 10(2)],Not Repeat</string>



    <string name="filter">Filter</string>
    <string name="show_specific_hazard_level">Show Specific Hazard Level :</string>
    <string name="show_or_n_critical_violations_within_the_last_year"><![CDATA[Show <= or >= N Critical Violations Within The Last Year :]]></string>
    <string name="n">N =</string>
    <string name="show_favourite">Show Favourites Only:</string>
    <string name="clear_filters">Clear Filters</string>
    <string name="show_don_t_show">Show/Don\'t Show</string>
    <string name="n_button_text"><![CDATA[<= / >= N]]></string>
</resources>